<resources name="resources">
    <string name="app_name">WiseB app</string>
    <string name="img1">img!</string>
    <string name="img2">img2</string>
    <string name="img3">img3</string>
    <string name="signup">Sign Up</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="login">Login</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="menu">Menú</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="edit">Update</string>
    <string name="find">Find</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="signin">Sign in</string>
    <string name="title_activity_menun">Menun</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome1">Bienvenido a WiseBapp</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MenuActivity</string>
</resources>