<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A5BF3"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="262dp"
        android:layout_height="197dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="72dp"
        android:contentDescription="@string/img2"
        android:src="@drawable/wisebcirculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome1"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnGoSignUp"
        android:layout_width="147dp"
        android:layout_height="68dp"
        android:onClick="signup"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="28dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:onClick="login"
        android:id="@+id/btnLogin"
        android:layout_width="147dp"
        android:layout_height="68dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="42dp"
        android:text="@string/signin"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>