<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A5BF3"
    tools:context=".Dashboard">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="20dp"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/phone"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="212dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="72dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="username"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="73dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:autofillHints="emailAddress"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="211dp"
        android:layout_height="52dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="73dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="210dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="69dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnupdate"
        android:layout_width="146dp"
        android:layout_height="63dp"
        android:onClick="updateUser"
        android:layout_marginStart="31dp"
        android:layout_marginTop="43dp"
        android:text="@string/edit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <Button
        android:id="@+id/btndelete"
        android:onClick="deleteUser"
        android:layout_width="146dp"
        android:layout_height="63dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="37dp"
        android:text="@string/delete"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <Button
        android:id="@+id/btnfind"
        android:onClick="findUser"
        android:layout_width="146dp"
        android:layout_height="63dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="146dp"
        android:text="@string/find"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="51dp"
        android:text="@string/prompt_email"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>