<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A5BF3"
    android:textAlignment="center"
    app:circularflow_radiusInDP="32"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="87dp"
        android:autofillHints="username"
        android:background="#FDFDFD"
        android:backgroundTint="#FDFDFD"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        tools:ignore="ExtraText,LabelFor,MissingConstraints,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="238dp"
        android:layout_height="60dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="87dp"
        android:autofillHints="password"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        tools:ignore="LabelFor,MissingConstraints,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        android:autofillHints="login"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:minHeight="48dp"
        android:singleLine="false"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#F8F8F8"
        android:textColorHighlight="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="89dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:text="@string/user"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="LabelFor,MissingConstraints"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/editTextText3"
        android:layout_width="238dp"
        android:layout_height="47dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="87dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtusername"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:onClick="SignIn"
        android:id="@+id/buttonsignin"
        android:layout_width="123dp"
        android:layout_height="60dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="144dp"
        android:text="@string/signin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpassword" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="170dp"
        android:layout_height="146dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="121dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:srcCompat="@drawable/avatar"
        android:contentDescription="@string/img2" />

</androidx.constraintlayout.widget.ConstraintLayout>